[gd_scene load_steps=8 format=3 uid="uid://cm3ofme0qu1m3"]

[ext_resource type="Script" uid="uid://bnn4boglcaueg" path="res://scripts/dummyEnemy.gd" id="1_v14b7"]
[ext_resource type="Script" uid="uid://cqjwyosij82uy" path="res://scripts/baseClasses/enemybase.gd" id="2_ipus7"]
[ext_resource type="Script" uid="uid://caux7u2nstll1" path="res://scripts/health.gd" id="3_ihkmf"]
[ext_resource type="Theme" uid="uid://bejt7vy1job0n" path="res://resources/normalDamage.tres" id="4_ko6wo"]
[ext_resource type="Texture2D" uid="uid://cwt4nq4yahpks" path="res://icon.svg" id="4_xxk7w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b40u"]
size = Vector2(54, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgj5k"]
size = Vector2(54, 54)

[node name="dummyEnemy" type="RigidBody2D" node_paths=PackedStringArray("base")]
position = Vector2(13, -15)
collision_layer = 4
collision_mask = 3
lock_rotation = true
script = ExtResource("1_v14b7")
base = NodePath("enemyBase")

[node name="enemyBase" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox", "healthManager")]
script = ExtResource("2_ipus7")
hurtbox = NodePath("../hurtbox")
healthManager = NodePath("../healthManager")

[node name="healthManager" type="Node2D" parent="." node_paths=PackedStringArray("bar")]
position = Vector2(2, 0)
script = ExtResource("3_ihkmf")
bar = NodePath("healthbar")

[node name="healthbar" type="ProgressBar" parent="healthManager"]
offset_left = -97.0
offset_top = 32.0
offset_right = 91.0
offset_bottom = 57.0
theme = ExtResource("4_ko6wo")
show_percentage = false

[node name="testEnemy" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(-1, 0)
scale = Vector2(0.422502, 0.422502)
texture = ExtResource("4_xxk7w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_2b40u")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
collision_priority = 0.4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_wgj5k")

[node name="floorCast" type="RayCast2D" parent="."]
position = Vector2(38, -9)
target_position = Vector2(0, 46)

[node name="eyeRight" type="RayCast2D" parent="."]
position = Vector2(21, 0)
target_position = Vector2(500, 0)
collision_mask = 2

[node name="eyeLeft" type="RayCast2D" parent="."]
position = Vector2(-22, 0)
target_position = Vector2(-200, 0)
collision_mask = 2

[node name="idleTimer" type="Timer" parent="."]
one_shot = true

[node name="fallCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 31)

[connection signal="area_entered" from="hurtbox" to="enemyBase" method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="idleTimer" to="." method="idleTimeout"]
